# chromatic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  security.yml
demo/: attack_scenarios.py  live_dashboard.py  tech_demo.py
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  SDLC.md  SECURITY.md  THREAT_MODEL.md  USING_YOUR_OWN_DATASET.md
scripts/: download_models.sh  eval_folder.py  setup.sh
src/chromatic/: __init__.py  exceptions.py
src/chromatic/api/: __init__.py  server.py
src/chromatic/config/: __init__.py  settings.py
src/chromatic/core/: __init__.py  detector.py  face_analyzer.py  fusion.py  motion.py  prnu.py  rppg.py  texture.py
src/chromatic/security/: __init__.py  audit.py  rate_limit.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/security/: __init__.py  audit_log.py  test_audit.py  test_rate_limit.py  test_validators.py
tests/unit/: test_fusion.py  test_motion.py  test_prnu.py  test_rppg.py  test_settings.py  test_texture.py
